Bugs , alignment, displaying and other fixes

--- a/src/pages/City/Cities/Cities.less
+++ b/src/pages/City/Cities/Cities.less
@@ -4,6 +4,18 @@
         color: #3c5438;
     }
 
+    .searchContainer{
+        display: flex;
+        align-items: baseline;
+        margin-bottom: 12px;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        .Input {
+            width: auto;
+        }
+    }
+
     .cityWrapper {
         display: flex;
         justify-content: center;
