--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -33,9 +33,6 @@
     color:#3c5438;
     border-color: #3c5438;
 }
-.cardBodyEmpty{
-    height: 70px;
-}
 .cardP{
     height: 25px;
 }
@@ -50,9 +47,12 @@
 .avatar{
     height: 168px;
 }
+.avatarEmpty:hover{
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
 .approversContent{
     width:  calc(60% - 30px);
-    height: calc(81vh - 64px);
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
